<!--
     Copyright (C) 2017 Angel Garcia

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources>
    <string name="app_name">HandleImage</string>
    <string name="action_settings">Settings</string>
    <string name="split_image">Split Image</string>
    <string name="drag_image">Drag Image</string>
    <string name="drag_and_drop">Drag And Dop</string>
    <string name="drop_outside">Dop outside view</string>
    <string name="share">Share</string>
    <string name="title_activity_split_image">SplitImageActivity</string>
    <string name="title_activity_drag_image">DragImageActivity</string>
    <string name="title_activity_drag_and_drop">DragAndDropActivity</string>
    <string name="title_activity_drop_outside">DropOutsideActivity</string>
</resources>
